Name: obelisk-asset-manifest
Version: 0.1
Synopsis: Project Synopsis Here
Description: Project Description Here
License: BSD3
Author: Obsidian Systems LLC
Maintainer: maintainer@obsidian.systems
Stability: Experimental
Category: Web
Build-type: Simple
Cabal-version: >= 1.10

library
  default-language: Haskell2010
  hs-source-dirs: src

  build-depends:
      base
    , bytestring
    , containers
    , deepseq
    , directory
    , SHA
    , filepath
    , template-haskell
    , text
    , transformers
    , unix-compat
    , vector
  exposed-modules:
    Obelisk.Asset.Cabal
    Obelisk.Asset.Gather
    Obelisk.Asset.Promoted
    Obelisk.Asset.Symlink
    Obelisk.Asset.TH

  other-extensions: TemplateHaskell
  ghc-options:
    -Wall -Werror -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O2
    -fno-warn-unused-do-bind -funbox-strict-fields -fprof-auto-calls

  if arch(javascript)
    buildable: False

executable obelisk-asset-manifest-generate
  default-language: Haskell2010
  hs-source-dirs: src-bin
  main-is: generate.hs
  build-depends:
      base
    , obelisk-asset-manifest
    , text

executable obelisk-asset-th-generate
  default-language: Haskell2010
  hs-source-dirs: src-bin
  main-is: static-th.hs
  build-depends:
      base
    , obelisk-asset-manifest
    , filepath
    , text
