name: obelisk-asset-serve-snap
version: 0.1
synopsis: Serve preprocessed assets using Snap
license: BSD3
author: Obsidian Systems LLC
maintainer: maintainer@obsidian.systems
category: Web
build-type: Simple
cabal-version: >=1.2

library
  hs-source-dirs: src

  build-depends:
      base
    , attoparsec
    , bytestring
    , containers
    , directory
    , filepath
    , snap
    , snap-core
    , obelisk-snap-extras
    , text
    , transformers
    , unix-compat
  exposed-modules:
      Obelisk.Asset.Accept
      Obelisk.Asset.Serve.Snap

  other-extensions: TemplateHaskell
  ghc-options: -Wall -Werror -fno-warn-unused-do-bind -fwarn-tabs -funbox-strict-fields -O2 -fprof-auto-calls
