name: obelisk-asset-serve-snap
version: 0.1
synopsis: Serve preprocessed assets using Snap
license: BSD3
author: Obsidian Systems LLC
maintainer: maintainer@obsidian.systems
category: Web
build-type: Simple
cabal-version: >=1.10

library
  default-language: Haskell2010
  hs-source-dirs: src

  build-depends:
      base
    , attoparsec
    , bytestring
    , containers
    , directory
    , filepath
    , snap
    , snap-core
    , obelisk-snap-extras
    , text
    , transformers
    , unix-compat
  exposed-modules:
      Obelisk.Asset.Accept
      Obelisk.Asset.Serve.Snap

  other-extensions: TemplateHaskell
  ghc-options:
    -Wall -Werror -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O2
    -fno-warn-unused-do-bind -funbox-strict-fields -fprof-auto-calls

  if arch(javascript)
    buildable: False
