name: obelisk-executable-config-common
version: 0.1
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base,
                 mtl,
                 reflex,
                 reflex-dom-core,
                 text,
                 transformers
  exposed-modules:
    Obelisk.ExecutableConfig.Common
  ghc-options: -Wall
