name: obelisk-executable-config-core
version: 0.1
license: BSD3
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src

  build-depends:
    aeson,
    base,
    bytestring,
    exceptions,
    filepath,
    lens,
    modern-uri,
    mtl,
    text,
    transformers

  exposed-modules:
    Obelisk.ExecutableConfig.Types
  other-modules:
    Obelisk.ExecutableConfig.Types.Core
    Obelisk.ExecutableConfig.Types.Builtins
