name: obelisk-executable-config-frontend
version: 0.1
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base,
                 containers,
                 ghcjs-dom,
                 jsaddle,
                 mtl,
                 primitive,
                 ref-tf,
                 reflex,
                 reflex-dom-core,
                 text,
                 transformers
  exposed-modules:
    Obelisk.ExecutableConfig.Frontend
  ghc-options: -Wall
